--- a/code1.html
+++ b/code1.html
@@ -83,39 +83,38 @@
     <div class="container">
         <h1>Код первой программы</h1>
         <pre><code class="language-python">
-import spacy
 import nltk
 import matplotlib.pyplot as plt
 import seaborn as sns
 from tkinter import Tk, Text, END, messagebox
 from tkinter import ttk
 import platform
-import subprocess
-
-nlp = spacy.load("ru_core_news_sm")
-nltk.download('punkt')
+nltk.download('stopwords')
+stop_words = set(nltk.corpus.stopwords.words('russian'))
 
 emotion_keywords = {
-    'Злость': ['злился', 'гнев', 'ярость', 'раздражение', 'агрессия'],
-    'Страх': ['страх', 'испуг', 'дрожь', 'паника', 'опасность'],
-    'Радость': ['радость', 'счастье', 'восторг', 'наслаждение', 'довольный'],
-    'Грусть': ['грусть', 'печаль', 'тоска', 'разочарование', 'слёзы'],
-    'Удивление': ['удивление', 'шок', 'внезапно', 'неожиданно', 'ахнул'],
+    'Злость': ['злость', 'гнев', 'раздражение', 'агрессия', 'ненависть', 'обида', 'злобный', 'враждебность'],
+    'Страх': ['страх', 'паника', 'угроза', 'боязнь', 'ужас', 'тревога', 'нервничать', 'беспокойство'],
+    'Радость': ['радость', 'счастье', 'восторг', 'наслаждение', 'довольный', 'улыбка', 'веселье', 'триумф'],
+    'Грусть': ['грусть', 'печаль', 'тоска', 'разочарование', 'слёзы', 'усталость', 'депрессия', 'скорбь'],
+    'Удивление': ['удивление', 'шок', 'неожиданно', 'потрясение', 'изумление', 'великолепие', 'поразительно']
 }
+
+def process_text(text):
+    doc = nlp(text.lower())
+    lemmas = [token.lemma_ for token in doc if token.text not in stop_words and token.pos_ in ["NOUN", "ADJ", "VERB"]]
+    return ' '.join(lemmas)
 
 def analyze_emotions(text):
     emotions = {emotion: 0 for emotion in emotion_keywords}
-    doc = nlp(text)
-    for sentence in doc.sents:
-        sentence_text = sentence.text.lower()
-        for emotion, keywords in emotion_keywords.items():
-            for keyword in keywords:
-                emotions[emotion] += sentence_text.count(keyword)
+    text = process_text(text)
+    for emotion, keywords in emotion_keywords.items():
+        for keyword in keywords:
+            emotions[emotion] += text.count(keyword)
     return emotions
 
 def visualize_emotions(emotions):
-    labels = list(emotions.keys())
-    values = list(emotions.values())
+    labels, values = list(emotions.keys()), list(emotions.values())
     plt.figure(figsize=(12, 6))
     sns.barplot(x=labels, y=values, palette='viridis')
     plt.title("Распределение эмоций в тексте", fontsize=16, fontweight='bold')
@@ -141,7 +140,6 @@ def create_gui():
 
     style = ttk.Style()
     style.theme_use('clam')
-
     style.configure('TButton', font=('Helvetica', 12), padding=6)
     style.configure('TLabel', font=('Helvetica', 12), background='#222222', foreground='#ffffff')
     style.configure('TFrame', background='#222222')
